--- a/index.html
+++ b/index.html
@@ -10,26 +10,27 @@
     <section id="about-me">
         <nav>
             <div class="personal__logo">Summer Ann</div>
-            <ul class="nav__link--list">
-                <li class="nav__link">
-                    <a href="#languages" class="
-                    nav__link--anchor
-                    link__hover-effect
-                    link__hover-effect--black">
-                        Languages</a>
-                <li class="nav__link">
-                    <a href="#projects" class="
-                    nav__link--anchor
-                    link__hover-effect
-                    link__hover-effect--black">
-                        Projects</a>
-                <li class=>
-                    <a href="mailto:summerannym@gmail.com" class="
-                    nav__link--anchor
-                    nav__link--anchor-primary">
-                        Contact</a>
-                </li>
-            </ul>
+                <ul class="nav__link--list">
+                    <li class="nav__link">
+                        <a href="#languages" class="
+                        nav__link--anchor
+                        link__hover-effect
+                        link__hover-effect--black">
+                            Languages</a>
+                    <li class="nav__link">
+                        <a href="#projects" class="
+                        nav__link--anchor
+                        link__hover-effect
+                        link__hover-effect--black">
+                            Projects</a>
+                    <li class=>
+                        <a href="mailto:summerannym@gmail.com" class="
+                        nav__link--anchor
+                        nav__link--anchor-primary">
+                            Contact</a>
+                    </li>
+                </ul>
+            </div>
         </nav>
         <div class="flex flex-1">
                     <div class="about-me__info row">
@@ -45,9 +46,36 @@
                                 and innovative user experience designs that make technology interactions meaningful and
                                 memorable.
                             </p>
-                        </div>   
+                        </div> 
+                        <figure class="about-me__img--container">
+                            <img src="./assets/undraw_web-devices_i15y.svg" alt="">
+                        </figure>
                     </div>
+        </div> 
+    </section>
+    <section id="languages">
+        <div class="container">
+            <div class="row">
+                <h1 class="section__title">My <span class="text--rose">Technology Stack</span>
+                </h1>
+                <div class="language__list">
+                    <div class="language">
+                    <figure class="language__img--wrapper">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
+                                alt="Html Logo" class="language__img">
+                        </figure>
+                        <span class="language__name">HTML</span>    
+                    </div>
+                    <div class="language">
+                    <figure class="language__img--wrapper">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/62/CSS3_logo.svg/512px-CSS3_logo.svg.png?20210705212817"
+                                alt="CSS Logo" class="language__img">
+                        </figure>
+                        <span class="language__name">CSS</span>    
+                    
                 </div>
+            </div>
+        </div>
     </section>
 </body>
 </html>
