--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Summer Annt</title>
+    <title>Summer Ann</title>
     <link rel="stylesheet" href="./styles.css" id="">
-</head>
+    <script src="https://kit.fontawesome.com/7c9fb1c5e7.js" crossorigin="anonymous"></script>
+    </head>
 <body>
     <section id="about-me">
         <nav>
@@ -72,10 +73,102 @@
                                 alt="CSS Logo" class="language__img">
                         </figure>
                         <span class="language__name">CSS</span>    
-                    
                 </div>
             </div>
         </div>
     </section>
+    <section id="projects">
+        <div class="container">
+            <div class="row">
+                <h1 class="section__title">Projects I haven't worked on yet
+                </h1>
+                <ul class="project__list">
+                    <li class="project">
+                        <div class="project wrapper">
+                           <img src="./assets/undraw_design_project.svg" alt="" class="project__img">
+                           <div class="project__description">
+                            <h3 class="project__description--title">Really cool site #1</h3>
+                            <h4 class="project__description--sub-title">HTML, CSS</h4>
+                            <p class="project__description--para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, animi iusto quis eligendi hic minus architecto corporis voluptas dicta quam. Esse, consectetur? Sint asperiores minima voluptas at, voluptatibus tempore! Nemo.</p>
+                            <div class="project__description--links">
+                                <a href="https://github.com/Summ3rann/TheSummerAnn"class="project__description--link">
+                                </a>
+                                <i class="fa-brands fa-github"></i>
+                            </div>
+                           </div> 
+                        </div>
+                    </li>
+                    <li>
+                        <div class="project wrapper">
+                           <img src="./assets/undraw_design_project.svg" alt=""class="project__img">
+                           <div class="project__description">
+                            <h3 class="project__description--title">Amazing project #2.</h3>
+                            <h4 class="project__description--sub-title">HTML, CSS</h4>
+                            <p class="project__description--para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, animi iusto quis eligendi hic minus architecto corporis voluptas dicta quam. Esse, consectetur? Sint asperiores minima voluptas at, voluptatibus tempore! Nemo.
+                            </p>
+                            <div class="project__description--links">
+                                <a href="https://github.com/Summ3rann/TheSummerAnn"class="project__description--link">
+                                </a>
+                                <i class="fa-brands fa-github"></i>
+                            </div>
+                           </div> 
+                        </div>
+                    </li>
+                    <li>
+                        <div class="project wrapper">
+                           <img src="./assets/undraw_design_project.svg" alt=""class="project__img">
+                           <div class="project__description">
+                            <h3 class="project__description--title">Yet another killer job!</h3>
+                            <h4 class="project__description--sub-title">HTML, CSS</h4>
+                            <p class="project__description--para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, animi iusto quis eligendi hic minus architecto corporis voluptas dicta quam. Esse, consectetur? Sint asperiores minima voluptas at, voluptatibus tempore! Nemo.</p>
+                            <div class="project__description--links">
+                                <a href="https://github.com/Summ3rann/TheSummerAnn"target="_blank" class="project__description--link">
+                                </a>
+                                <i class="fa-brands fa-github"></i>
+                            </div>
+                           </div> 
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <div class="row footer__row">
+          <a href="#" class="footer__anchor">
+                <figure class= "footer__logo">
+                    <img src="./assets/logo.svg" class="footer__logo--img">
+                </figure>
+                <span class="footer__logo--popper">
+                    Top
+                   <i class="fa-solid fa-arrow-up"></i> 
+                </span>
+            </a>
+            <div class="footer__social--list">
+                <a href="https://google.com" target="_blank" class="
+                footer__social--link
+                link__hover-effect
+                link__hover-effect--white
+                ">Github</a>
+                <a href="https://google.com" target="_blank" class="
+                footer__social--link
+                link__hover-effect
+                link__hover-effect--white
+                ">LinkedIn</a>
+                <a href="mailto:summerannym@gmail.com" target="_blank" class="
+                footer__social--link
+                link__hover-effect
+                link__hover-effect--white
+                ">Email</a>
+                <a href="./assets/Example Resume.pdf" target="_blank" class="
+                footer__social--link
+                link__hover-effect
+                link__hover-effect--white
+                ">Resume</a>
+            </div>
+            <div class="footer__copyright">Copyright © 2025 Summer Morrison
+            </div>  
+        </div>
+    </footer>
 </body>
 </html>
