cssprojects,footer,animations

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 </h1>
                 <ul class="project__list">
                     <li class="project">
-                        <div class="project wrapper">
+                        <div class="project__wrapper">
                            <img src="./assets/undraw_design_project.svg" alt="" class="project__img">
                            <div class="project__description">
                             <h3 class="project__description--title">Really cool site #1</h3>
@@ -92,14 +92,14 @@
                             <p class="project__description--para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, animi iusto quis eligendi hic minus architecto corporis voluptas dicta quam. Esse, consectetur? Sint asperiores minima voluptas at, voluptatibus tempore! Nemo.</p>
                             <div class="project__description--links">
                                 <a href="https://github.com/Summ3rann/TheSummerAnn"class="project__description--link">
-                                </a>
                                 <i class="fa-brands fa-github"></i>
+                            </a>
                             </div>
                            </div> 
                         </div>
                     </li>
-                    <li>
-                        <div class="project wrapper">
+                    <li class="project">
+                        <div class="project__wrapper">
                            <img src="./assets/undraw_design_project.svg" alt=""class="project__img">
                            <div class="project__description">
                             <h3 class="project__description--title">Amazing project #2.</h3>
@@ -108,14 +108,14 @@
                             </p>
                             <div class="project__description--links">
                                 <a href="https://github.com/Summ3rann/TheSummerAnn"class="project__description--link">
+                                    <i class="fa-brands fa-github"></i>
                                 </a>
-                                <i class="fa-brands fa-github"></i>
                             </div>
                            </div> 
                         </div>
                     </li>
-                    <li>
-                        <div class="project wrapper">
+                    <li class="project">
+                        <div class="project__wrapper">
                            <img src="./assets/undraw_design_project.svg" alt=""class="project__img">
                            <div class="project__description">
                             <h3 class="project__description--title">Yet another killer job!</h3>
@@ -123,8 +123,8 @@
                             <p class="project__description--para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, animi iusto quis eligendi hic minus architecto corporis voluptas dicta quam. Esse, consectetur? Sint asperiores minima voluptas at, voluptatibus tempore! Nemo.</p>
                             <div class="project__description--links">
                                 <a href="https://github.com/Summ3rann/TheSummerAnn"target="_blank" class="project__description--link">
+                                    <i class="fa-brands fa-github"></i>
                                 </a>
-                                <i class="fa-brands fa-github"></i>
                             </div>
                            </div> 
                         </div>
@@ -137,7 +137,7 @@
         <div class="row footer__row">
           <a href="#" class="footer__anchor">
                 <figure class= "footer__logo">
-                    <img src="./assets/logo.svg" class="footer__logo--img">
+                    <img src="./assets/SMLogo.svg" class="footer__logo--img">
                 </figure>
                 <span class="footer__logo--popper">
                     Top
