reactive for mobile and small screens

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                             </p>
                         </div> 
                         <figure class="about-me__img--container">
-                            <img src="./assets/undraw_web-devices_i15y.svg" alt="">
+                            <img class="about-me__img" src="./assets/undraw_web-devices_i15y.svg" alt="">
                         </figure>
                     </div>
         </div> 
